crates/quiver/tests/compile_fail/dictionary_option_key.stderr
error[E0277]: `Option<i32>` cannot be used as a dictionary key type
 --> tests/compile_fail/dictionary_option_key.rs:9:23
  |
9 |     assert_datatype::<Dictionary<Option<i32>, String>>();
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ dictionary keys must be one of `i8`–`i64`, `u8`–`u64`
  |
  = help: the trait `DictionaryKey` is not implemented for `Option<i32>`
  = note: for nullable dictionary rows, use `Option<Dictionary<K, V>>` instead of `Dictionary<Option<K>, V>` — the keys are storage indices, not readable values
  = help: the following other types implement trait `DictionaryKey`:
            i16
            i32
            i64
            i8
            u16
            u32
            u64
            u8
  = note: required for `quiver::Dictionary<Option<i32>, String>` to implement `Datatype`
note: required by a bound in `assert_datatype`
 --> tests/compile_fail/dictionary_option_key.rs:6:23
  |
6 | fn assert_datatype<L: Datatype>() {}
  |                       ^^^^^^^^ required by this bound in `assert_datatype`
